--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "npx nodemon backend/server.js",
-    "dev": "set NODE_ENV=development&&npx nodemon backend/server.js",
-    "prod": "set NODE_ENV=production&&npx nodemon backend/server.js",
+    "dev": "NODE_ENV=development npx nodemon backend/server.js",
+    "prod": "NODE_ENV=production npx nodemon backend/server.js",
     "seeder": "node backend/utils/seeder.js"
   },
   "author": "Jarvin",
